# opengl_engine

./: CMakeLists.txt  README.md
include/: Engine.h  Graphics.h  Input.h  Vertex.h
include/objects/: Box.h  Entity.h
include/programs/: Program.h  Program2D.h
shaders/: shader.fs  shader.vs
src/: Engine.cpp  Graphics.cpp  Input.cpp  main.cpp
src/objects/: Box.cpp  Entity.cpp
src/programs/: Program.cpp  Program2D.cpp
